tests/errors/semantic/E013_exec_in_mod.zy
# E013_exec_in_mod {
    #> { fn_ok }

    fn_ok() { <~ 1 }

    >> "this should not be allowed" ¶
}
